Home, About, Updates creation
Created 3 pages for future use, for my porfolio, and site updates

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
         <a href="updates.html">Updates</a>
     </nav>
 
-    <h1>Welcome to My Homepage</h1>
-    <p>This is the home page of my personal website.</p>
+    <h1>About me</h1>
+    <p>In progress...</p>
 
     <script src="script.js"></script>
 </body>
