--- a/updates.html
+++ b/updates.html
@@ -11,8 +11,8 @@
         <a href="updates.html">Updates</a>
     </nav>
 
-    <h1>Welcome to My Homepage</h1>
-    <p>This is the home page of my personal website.</p>
+    <h1>Welcome to My Updates</h1>
+    <p>This is the page for updates.</p>
 
     <script src="script.js"></script>
 </body>
