--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - My Website</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
+    <nav >
+        
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="updates.html">Updates</a>
+        <a href="inspo.html">Inspo</a>
     </nav>
 
-    <h1>Welcome to My Homepage</h1>
-    <p>This is the home page of my personal website.</p>
 
+    <div  id="typingAnimation"></div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
