--- a/updates.html
+++ b/updates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home - My Website</title>
+    <title>Updates</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -9,6 +9,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="updates.html">Updates</a>
+        <a href="inspo.html">Inspo</a>
     </nav>
 
     <h1>Welcome to My Updates</h1>
